--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,16 +1,14 @@
 <header class="header">
-    <h1 class="title">Gulp starter</h1>
+    <h1 class="title">Candyvit</h1>
   <nav class="nav">
-    <a href="" class="logo"><img src="../images/avatar.png" alt=""></a>
-    <svg>
-      <use></use>
-    </svg>
+    <a href="" class="logo"><img src="" alt=""></a>
     <ul class="nav__list">
-      <li class="nav__item"><a href="" class="nav__link">1 link</a></li>
-      <li class="nav__item"><a href="" class="nav__link">2 link</a></li>
-      <li class="nav__item"><a href="" class="nav__link">3 link</a></li>
-      <li class="nav__item"><a href="" class="nav__link">4 link</a></li>
-      <li class="nav__item"><a href="" class="nav__link">5 link</a></li>
+      <li class="nav__item"><a href="" class="nav__link">About</a></li>
+      <li class="nav__item"><a href="" class="nav__link">ICO section</a></li>
+      <li class="nav__item"><a href="" class="nav__link">Whitepaper</a></li>
+      <li class="nav__item"><a href="" class="nav__link">Roadmap</a></li>
+      <li class="nav__item"><a href="" class="nav__link">Team</a></li>
+      <li class="nav__item"><a href="" class="nav__link">FAQ</a></li>
     </ul>
   </nav>
 </header>
