add last proj changes

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -1,6 +1,10 @@
-<main>
-  <section></section>
-  <section></section>
-  <section></section>
-  <section></section>
+<main class="main-container">
+  <section class="about-us">
+<h3 class="about-us__title">Abot us</h3>
+<img src="./images/about_us.jpg" alt="" width="865px">
+  </section>
+
+  <section class=""></section>
+  <section class=""></section>
+  <section class=""></section>
 </main>
