--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,7 +1,8 @@
-<header class="header">
-    <h1 class="title">Candyvit</h1>
-  <nav class="nav">
-    <a href="" class="logo"><img src="" alt=""></a>
+<!-- Main Header -->
+<header class="main-header">
+  <nav class="nav container">
+    <a href="" class="logo"><img src="../images/logo.png" alt=""></a>
+    <div class="nav__cont">
     <ul class="nav__list">
       <li class="nav__item"><a href="" class="nav__link">About</a></li>
       <li class="nav__item"><a href="" class="nav__link">ICO section</a></li>
@@ -10,5 +11,31 @@
       <li class="nav__item"><a href="" class="nav__link">Team</a></li>
       <li class="nav__item"><a href="" class="nav__link">FAQ</a></li>
     </ul>
+    <button class="nav__item--button">Log In</button>
+  </div>
   </nav>
+  <!-- Header Container -->
+  <div class="header-cont">
+    <div class="left-block container">
+      <h2 class="left-block__title">Lorem, ipsum dolor.</h2>
+      <p class="left-block__info">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+      <div class="line-slider__text">
+        <div class="text__left">
+          <p>Sold:</p>
+          <span class="quantity">567889432</span>
+        </div>
+        <div class="text__right">
+          <p>Availiable:</p>
+          <span class="quantity">567889432</span>
+        </div>
+      </div>
+      <div class="range-control">
+        <div class="scale">
+          <div class="bar" style="width:70%;">
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
 </header>
