--- a/src/html/main.html
+++ b/src/html/main.html
@@ -1,10 +1,29 @@
-<main class="main-container">
+<main class="main-container container">
   <section class="about-us">
-<h3 class="about-us__title">Abot us</h3>
-<img src="./images/about_us.jpg" alt="" width="865px">
-  </section>
+<h3 class="section__title section__title--first">About us</h3>
+<div class="img-wrapper">
+<img class="about-us__img" src="./images/about.jpg" alt="" width="837px" height="432px">
+</div>
+</section>
 
-  <section class=""></section>
-  <section class=""></section>
-  <section class=""></section>
+  <section class="problem-solutions">
+      <h3 class="section__title section__title--second">Problem & Solution</h3>
+      <div class="problem">
+        <h4 class="problem__title">Problem</h4>
+        <ul class="problem__list">
+          <li class="problem__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</li>
+          <li class="problem__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</li>
+          <li class="problem__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</li>
+          <li class="problem__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</li>
+        </ul>
+      </div>
+      <div></div>
+
+  </section>
+  <section class="key-benefits">
+      <h3 class="section__title section__title--second">Key benefits</h3></section>
+
+  <section class="Whitepaper">
+    <h3 class="section__title section__title--second">Whitepaper</h3>
+  </section>
 </main>
