add changes main

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -2,7 +2,7 @@
   <section class="about-us">
     <h3 class="section__title section__title--first">About us</h3>
     <div class="img-wrapper">
-      <img class="about-us__img" src="./images/about.jpg" alt="" width="837px" height="432px">
+      <img class="about-us__img" src="./images/about.jpg" alt="">
     </div>
   </section>
   <section class="problem-solutions">
@@ -15,7 +15,7 @@
         <li class="problem__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</li>
       </ul>
       <div class="solution">
-        <h4 class="solution__title">Problem</h4>
+        <h4 class="solution__title">Solution</h4>
         <p class="solution__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut labore et dolore
           magna aliqua. Ut enim ad</p>
@@ -26,33 +26,33 @@
   <section class="key-benefits">
     <h3 class="section__title section__title--third">Key benefits</h3>
     <div class="key-benefits__container">
-      <div class="title-one">
-        <h4 class="title">Lorem ipsum dolor </h4>
-        <ul class="first-title">
-          <li class="first-title__text target">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</li>
-          <li class="first-title__text balance">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</li>
-          <li class="first-title__text wallet">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</li>
+      <div class="key-benefits__block">
+        <h4 class="key-benefits__block--title">Lorem ipsum dolor </h4>
+        <ul class="key-benefits__list">
+          <li class="key-benefits__item key-benefits__item--target">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</li>
+          <li class="key-benefits__item key-benefits__item--balance">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</li>
+          <li class="key-benefits__item key-benefits__item--wallet">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</li>
         </ul>
       </div>
-      <div class="title-one">
-        <h4 class="title">Lorem ipsum dolor </h4>
-        <ul class="first-title">
-          <li class="first-title__text avatar">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</li>
-          <li class="first-title__text economic">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</li>
+      <div class="key-benefits__block">
+        <h4 class="key-benefits__block--title">Lorem ipsum dolor </h4>
+        <ul class="key-benefits__list">
+          <li class="key-benefits__item key-benefits__item--avatar">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</li>
+          <li class="key-benefits__item key-benefits__item--economic">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</li>
         </ul>
       </div>
-      <div class="title-one">
-        <h4 class="title">Lorem ipsum dolor </h4>
-        <ul class="first-title">
-          <li class="first-title__text brainstorm">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</li>
-          <li class="first-title__text blank">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</li>
+      <div class="key-benefits__block">
+        <h4 class="key-benefits__block--title">Lorem ipsum dolor </h4>
+        <ul class="key-benefits__list">
+          <li class="key-benefits__item key-benefits__item--brainstorm">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</li>
+          <li class="key-benefits__item key-benefits__item--blank">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</li>
         </ul>
       </div>
-      <div class="title-one">
-        <h4 class="title">Lorem ipsum dolor </h4>
-        <ul class="first-title">
-          <li class="first-title__text papers">Lorem ipsum dolor sit amet, consectetur </li>
-          <li class="first-title__text chart">Lorem ipsum dolor sit amet, consectetur </li>
+      <div class="key-benefits__block">
+        <h4 class="key-benefits__block--title">Lorem ipsum dolor </h4>
+        <ul class="key-benefits__list">
+          <li class="key-benefits__item key-benefits__item--papers">Lorem ipsum dolor sit amet, consectetur </li>
+          <li class="key-benefits__item key-benefits__item--chart">Lorem ipsum dolor sit amet, consectetur </li>
         </ul>
       </div>
     </div>
@@ -61,7 +61,7 @@
 
   <section class="whitepaper">
     <h3 class="section__title section__title--fourth">Whitepaper</h3>
-    <div class="list-container">
+    <div class="whitepaper__block">
       <ul class="whitepaper__list">
         <li class="whitepaper__item">
           <img class="whitepaper__img" src="./images/germany.png" alt="">
