Full modified header v2

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -100,7 +100,7 @@
         </ul>
         <p class="right-block__conv">1 CVT = US$ 0.05</p>
         <p class="right-block__acc">We accept <span class="img-currency"> eth</span></p>
-        <button class="right-bloc__button">Contribute</button>
+        <button class="right-block__button">Contribute</button>
       </div>
     </div>
   </div>
