--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,6 +1,6 @@
 <!-- Main Header -->
 <header class="main-header">
-  <nav class="nav ">
+  <nav class="nav">
     <a href="" class="logo"><img src="../images/logo.png" alt=""></a>
     <div class="nav__cont">
       <ul class="nav__list">
@@ -10,8 +10,8 @@
         <li class="nav__item"><a href="" class="nav__link">Roadmap</a></li>
         <li class="nav__item"><a href="" class="nav__link">Team</a></li>
         <li class="nav__item"><a href="" class="nav__link">FAQ</a></li>
+        <button class="nav__item--button">log in</button>
       </ul>
-      <button class="nav__item--button">Log In</button>
     </div>
   </nav>
   <!-- Header Container -->
