add adjustment to  line-toggle-nim,max::after

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -39,8 +39,8 @@
         <div class="range-control">
           <div class="scale">
             <div class="bar" style="width:75%;">
-              <div class="line-toggle-min"></div>
-              <div class="line-toggle-max"></div>
+              <div class="line-toggle-min" data-text="Dec, 17"></div>
+              <div class="line-toggle-max" data-text="Jan, 17"></div>
             </div>
           </div>
         </div>
