add class to left-block__socials child (li,a,svg). add beautify style (animation, scale, rotate,hover, focus etc.)

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -45,30 +45,30 @@
           </div>
         </div>
         <ul class="left-block__socials">
-          <li>
-            <a href="#">
-              <svg>
+          <li class="left-block__socials__item">
+            <a class="left-block__socials__link" href="#">
+              <svg class="left-block__socials__img">
                 <use href="../images/sprite.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
-          <li>
-            <a href="#">
-              <svg>
+          <li class="left-block__socials__item">
+            <a class="left-block__socials__link" href="#">
+              <svg class="left-block__socials__img">
                 <use href="../images/sprite.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
-          <li>
-            <a href="#">
-              <svg>
+          <li class="left-block__socials__item">
+            <a class="left-block__socials__link" href="#">
+              <svg class="left-block__socials__img">
                 <use href="../images/sprite.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
-          <li>
-            <a href="#">
-              <svg>
+          <li class="left-block__socials__item">
+            <a class="left-block__socials__link" href="#">
+              <svg class="left-block__socials__img">
                 <use href="../images/sprite.svg#icon-telegram"></use>
               </svg>
             </a>
