change file path for logo.npg

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -2,7 +2,7 @@
 
 <header class="main-header">
   <nav class="nav">
-    <a href="" class="logo"><img src="../images/logo.png" alt=""></a>
+    <a href="" class="logo"><img src="./images/logo.png" alt=""></a>
     <div class="nav__cont">
       <ul class="nav__list">
         <li class="nav__item"><a href="" class="nav__link">About</a></li>
