--- a/src/html/header.html
+++ b/src/html/header.html
@@ -48,28 +48,28 @@
           <li class="left-block__socials__item">
             <a class="left-block__socials__link" href="#">
               <svg class="left-block__socials__img">
-                <use href="../images/sprite.svg#icon-facebook"></use>
+                <use href="./images/sprite.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="left-block__socials__item">
             <a class="left-block__socials__link" href="#">
               <svg class="left-block__socials__img">
-                <use href="../images/sprite.svg#icon-twitter"></use>
+                <use href="./images/sprite.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="left-block__socials__item">
             <a class="left-block__socials__link" href="#">
               <svg class="left-block__socials__img">
-                <use href="../images/sprite.svg#icon-instagram"></use>
+                <use href="./images/sprite.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="left-block__socials__item">
             <a class="left-block__socials__link" href="#">
               <svg class="left-block__socials__img">
-                <use href="../images/sprite.svg#icon-telegram"></use>
+                <use href="./images/sprite.svg#icon-telegram"></use>
               </svg>
             </a>
           </li>
